--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corey Coleson</title>
+    <meta name="viewport" content="user-scalable=0, width=device-width, initial-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
 </head>
 
 <style>
@@ -22,6 +24,7 @@
     body {
         display: flex;
         width: 300vw;
+        position: relative;
     }
 
     h1 {
@@ -49,7 +52,7 @@
         opacity: 0;
         margin-top: 0;
         white-space: nowrap;
-        font-size: 5vw;
+        font-size: 4rem;
         transition: 1s;
     }
 
@@ -167,6 +170,12 @@
         margin-bottom: 2rem;
         line-height: 170%;
     }
+
+    @media only screen and (max-width: 720px) {
+        .name {
+            font-size: 2.3rem;
+        }
+    }
 </style>
 
 <body>
@@ -219,7 +228,7 @@
                     </a>
                 </div>
             </div>
-            <h4 style="margin-bottom: 3rem; white-space: nowrap;">To navigate: Click the left, or right edges of the page!<!-- Otherwise, just scroll!--></h4>
+            <h4 style="margin-bottom: 3rem;" id="navigation-text">To navigate: Click the left, or right edges of the page!<!-- Otherwise, just scroll!--></h4>
         </div>
 
         <div class="side-button right" onclick="homeToProjects()">
