--- a/tools.html
+++ b/tools.html
@@ -13,7 +13,7 @@
     <div style="display: flex; gap: 1rem; padding-top: 1rem;">
         <div class="tool-card"><a href="tools/coin.html">Flip a coin</a></div>
         <div class="tool-card"><a href="tools/choose.html">Choose from list</a></div>
-        <div class="tool-card"><a href="">Make groups from list</a></div>
+        <div class="tool-card"><a href="tools/groupchoose.html">Make groups from list</a></div>
     </div>
 </body>
 </html>
