--- a/tools/groupchoose.html
+++ b/tools/groupchoose.html
@@ -68,7 +68,7 @@
                 if (!item)
                     break
                 group.push(item)
-                items.splice(groups.indexOf(item), 1);
+                items.splice(items.indexOf(item), 1);
             }
             groups.push(group)
         }
